--- a/src/StringGenerator.Client/StringGenerator.Client.csproj
+++ b/src/StringGenerator.Client/StringGenerator.Client.csproj
@@ -7,7 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
-    <PackageReference Include="StringGenerator" Version="0.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StringGenerator\StringGenerator.csproj" />
   </ItemGroup>
 
 </Project>
