--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Build
-      run: sudo chmod +x ./build.sh
-      run: ./build.sh
+      run: sudo chmod +x ./build.sh && ./build.sh
+      
 
     
