--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,8 +17,12 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    - name: Build
-      run: sudo chmod +x ./build.sh && ./build.sh
+
+    - name: Pre-build
+      run: sudo chmod +x ./build.sh
       
+    - name: Build
+      run: ./build.sh
+
 
     
