trying to fix gitversion issue

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,14 +11,21 @@ jobs:
 
     runs-on: ubuntu-latest
 
+
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET
+    - name: Setup .NET 5.0
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-        dotnet-version: 3.1
 
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup netcoreapp3.1
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: netcoreapp3.1
+        
     - name: Pre-build
       run: sudo chmod +x ./build.sh
 
