--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,10 +20,10 @@ jobs:
       with:
         dotnet-version: 5.0.x
 
-    - name: Setup netcoreapp3.1
-      uses: actions/setup-dotnet@v1
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v0.9.7
       with:
-        dotnet-version: netcoreapp3.1
+        versionSpec: '5.x'
 
     - name: Pre-build
       run: sudo chmod +x ./build.sh
