--- a/src/StringGenerator/StringGenerator.csproj
+++ b/src/StringGenerator/StringGenerator.csproj
@@ -6,6 +6,7 @@
     <Version>0.0.1</Version>
     <Authors>Chris Opthoog</Authors>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Company>MYOB</Company>
     
   </PropertyGroup>
 
