setting github environment, pass environment secret as parameter to build

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,5 +1,7 @@
 name: .NET
 
+environment: StringGeneratorEnv
+
 on:
   push:
     branches: [ master ]
@@ -30,7 +32,4 @@ jobs:
       run: sudo chmod +x ./build.sh
 
     - name: Build and Publish NuGet
-      env:
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-      run: ./build.sh Push
-
+      run: ./build.sh Push --NugetApiKey ${{ secrets.NUGET_API_KEY }}
