--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,5 @@
 name: .NET
 
-environment: StringGeneratorEnv
-
 on:
   push:
     branches: [ master ]
@@ -9,6 +7,9 @@ on:
     branches: [ master ]
 
 jobs:
+  environment: 
+      name: StringGeneratorEnv
+
   build:
 
     runs-on: ubuntu-latest
