--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,10 +26,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
 
-    - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.7
-      with:
-        versionSpec: '5.10.3'
+    - name: GitTools
+      uses: GitTools/actions@v0.9.14
 
     - name: Pre-build
       run: sudo chmod +x ./build.sh
